HOTFIX : Nginx 에러 수정

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -65,6 +65,8 @@ services:
 
   frontend:
     container_name: frontend
+    ports:
+      - "3000:3000"
     image: maaayreel/relaysketch-frontend:latest
     depends_on:
       - django
