--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -55,7 +55,7 @@ http {
 
         # Frontend 설정
         location / {
-            proxy_pass http://frontend:3000; # 여기서 'frontend'는 Frontend 서비스의 호스트 이름이나 IP 주소입니다.
+            proxy_pass http://localhost:3000;
             # 아래 proxy_set_header 지시문들은 프록시된 요청의 헤더를 설정합니다.
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
