--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,6 +38,14 @@ http {
 
     server {
         listen 80; # 80번 포트에서 요청을 수신하도록 설정합니다.
+        listen [::]:80;
+
+        server_name relaysketch.online www.relaysketch.online; # 서버의 도메인 이름을 설정합니다.
+
+        location /.well-known/acme-challenge/ {
+             allow all;
+             root /var/www/certbot;
+        } 
 
         location = /favicon.ico { access_log off; log_not_found off; }
 
