--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,27 +38,14 @@ http {
 
     server {
         listen 80; # 80번 포트에서 요청을 수신하도록 설정합니다.
+        listen [::]:80;
+
         server_name relaysketch.online www.relaysketch.online; # 서버의 도메인 이름을 설정합니다.
-        server_tokens off; # NGINX 버전 정보를 응답 헤더에서 제거합니다.
 
         location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-        }
-
-        location / {
-        return 301 https://$host$request_uri;
-        }
-    }
-
-    server {
-        listen 443 ssl; # 443번 포트에서 요청을 수신하도록 설정합니다.
-        server_name relaysketch.online www.relaysketch.online; # 서버의 도메인 이름을 설정합니다.
-        server_tokens off; # NGINX 버전 정보를 응답 헤더에서 제거합니다.
-
-        ssl_certificate /etc/letsencrypt/live/relaysketch.online/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/relaysketch.online/privkey.pem;
-        include /etc/letsencrypt/options-ssl-nginx.conf;
-        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+             allow all;
+             root /var/www/certbot;
+        } 
 
         location = /favicon.ico { access_log off; log_not_found off; }
 
