--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,14 +38,27 @@ http {
 
     server {
         listen 80; # 80번 포트에서 요청을 수신하도록 설정합니다.
-        listen [::]:80;
-
         server_name relaysketch.online www.relaysketch.online; # 서버의 도메인 이름을 설정합니다.
+        server_tokens off; # NGINX 버전 정보를 응답 헤더에서 제거합니다.
 
         location /.well-known/acme-challenge/ {
-             allow all;
-             root /var/www/certbot;
-        } 
+        root /var/www/certbot;
+        }
+
+        location / {
+        return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl; # 443번 포트에서 요청을 수신하도록 설정합니다.
+        server_name relaysketch.online www.relaysketch.online; # 서버의 도메인 이름을 설정합니다.
+        server_tokens off; # NGINX 버전 정보를 응답 헤더에서 제거합니다.
+
+        ssl_certificate /etc/letsencrypt/live/relaysketch.online/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/relaysketch.online/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
         location = /favicon.ico { access_log off; log_not_found off; }
 
@@ -65,7 +78,7 @@ http {
         location / {
             proxy_pass http://frontend:3000;
             # 아래 proxy_set_header 지시문들은 프록시된 요청의 헤더를 설정합니다.
-            proxy_set_header Host $host;
+            proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
