fix : nginx 설정 수정

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -63,7 +63,7 @@ http {
         location = /favicon.ico { access_log off; log_not_found off; }
 
         # Django 정적 파일 설정
-        location /static/ {
+        location ~ ^/static/ {
             alias /staticfiles/; # Django의 정적 파일이 저장된 실제 경로로 변경해야 합니다.
             expires 30d; # 정적 파일에 대한 캐시 만료 시간을 30일로 설정합니다.
         }
@@ -75,7 +75,7 @@ http {
         # }
 
         # Frontend 설정
-        location / {
+        location ~ ^/ {
             proxy_pass http://frontend:3000;
             # 아래 proxy_set_header 지시문들은 프록시된 요청의 헤더를 설정합니다.
             proxy_set_header Host $http_host;
@@ -85,7 +85,7 @@ http {
         }
 
         # Django 설정 (API페이지)
-        location /api/ {
+        location ~ ^/api/ {
             proxy_pass http://django:8000; # 여기서 'django'는 Django 서비스의 호스트 이름이나 IP 주소입니다.
             # 아래 proxy_set_header 지시문들은 프록시된 요청의 헤더를 설정합니다.
             proxy_set_header Host $host;
@@ -95,7 +95,7 @@ http {
         }
 
         # Django 설정 (웹소켓)
-        location /ws/ {
+        location ~ ^/ws/ {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
