--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -78,8 +78,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_hide_header Content-Type;
-            add_header Content-Type application/json;
+            proxy_set_header Content-Type application/json;
         }
 
         # Django 설정 (웹소켓)
@@ -93,8 +92,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Host $server_name;
-            proxy_hide_header Content-Type;
-            add_header Content-Type application/json;
+            proxy_set_header Content-Type application/json;
         }   
 
         # gzip 설정
