--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,6 +23,20 @@ http {
     }
 
     server {
+        listen 80; # 80번 포트에서 요청을 수신하도록 설정합니다.
+        server_name relaysketch.online www.relaysketch.online; # 서버의 도메인 이름을 설정합니다.
+        server_tokens off; # NGINX 버전 정보를 응답 헤더에서 제거합니다.
+
+        location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        }
+
+        location / {
+        return 301 https://www.relaysketch.online$request_uri;
+        }
+    }
+
+    server {
         listen 443 ssl; # 443번 포트에서 요청을 수신하도록 설정합니다.
         server_name relaysketch.online www.relaysketch.online; # 서버의 도메인 이름을 설정합니다.
         server_tokens off; # NGINX 버전 정보를 응답 헤더에서 제거합니다.
@@ -47,7 +61,7 @@ http {
         # }
 
         # Frontend 설정
-        location ~ ^/ {
+        location / {
             proxy_pass http://frontend:3000;
             # 아래 proxy_set_header 지시문들은 프록시된 요청의 헤더를 설정합니다.
             proxy_set_header Host $http_host;
@@ -91,16 +105,6 @@ http {
         gzip_min_length 256; # 이 길이 이상의 응답에 대해서만 gzip 압축 적용
         # 압축 적용 대상 MIME 타입 설정
         gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-    }
-
-    server {
-        listen 80; # 80번 포트에서 요청을 수신하도록 설정합니다.
-        server_name relaysketch.online www.relaysketch.online; # 서버의 도메인 이름을 설정합니다.
-        server_tokens off; # NGINX 버전 정보를 응답 헤더에서 제거합니다.
-
-        location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-        }
     }
 }
 
