--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,10 @@ http {
     server_tokens off; # NGINX 버전 정보를 응답 헤더에서 제거합니다.
     keepalive_timeout 75; # keepalive 타임아웃을 75초로 설정합니다.
 
+    proxy_buffers 8 16k;
+    proxy_buffer_size 32k;
+
+
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
     '$status $body_bytes_sent "$http_referer" '
     '"$http_user_agent" "$http_x_forwarded_for"'; # 로그 포맷을 설정합니다.
