--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -82,6 +82,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Content-Type application/json;
         }
 
         # Django 설정 (웹소켓)
