--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "eslint-config-prettier": "^8.8.0",
     "file-saver": "^2.0.5",
+    "js-cookie": "^3.0.5",
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "mobx": "^6.10.0",
@@ -33,6 +34,7 @@
     "@babel/plugin-proposal-decorators": "^7.22.7",
     "@babel/preset-env": "^7.22.9",
     "@types/file-saver": "^2.0.5",
+    "@types/js-cookie": "^3.0.3",
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.4.5",
     "@types/react": "^18.0.37",
