--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -60,6 +60,7 @@ jobs:
           echo "AWS_SECRET_ACCESS_KEY=\"${{ secrets.AWS_SECRET_ACCESS_KEY }}\"" >> .env
           echo "AWS_STORAGE_BUCKET_NAME=\"${{ secrets.AWS_STORAGE_BUCKET_NAME }}\"" >> .env
           echo "AWS_S3_REGION_NAME=\"${{ secrets.AWS_S3_REGION_NAME }}\"" >> .env
+          echo "AWS_REDIS_HOST=\"${{ secrets.AWS_REDIS_HOST }}\"" >> .env
 
       - name: Copy env file to EC2
         uses: appleboy/scp-action@master
@@ -71,15 +72,15 @@ jobs:
           source: ".env"
           target: "compose"
 
-      - name: Copy Grafana files to EC2
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_KEY }}
-          port: ${{ secrets.EC2_PORT }}
-          source: "grafana.ini"
-          target: "compose/grafana"
+#      - name: Copy Grafana files to EC2
+#        uses: appleboy/scp-action@master
+#        with:
+#          host: ${{ secrets.EC2_HOST }}
+#          username: ${{ secrets.EC2_USERNAME }}
+#          key: ${{ secrets.EC2_KEY }}
+#          port: ${{ secrets.EC2_PORT }}
+#          source: "grafana.ini"
+#          target: "compose/grafana"
 
       - name: Copy docker-compose.prod.yml to EC2
         uses: appleboy/scp-action@master
