--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -97,6 +97,10 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Host $server_name;
             proxy_set_header Content-Type application/json;
+
+            proxy_connect_timeout 7d;
+            proxy_send_timeout 7d;
+            proxy_read_timeout 7d;
         }   
 
         # gzip 설정
