feat : nginx loadbalancing 테스트

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,8 +22,14 @@ http {
     '$status $body_bytes_sent "$http_referer" '
     '"$http_user_agent" "$http_x_forwarded_for"'; # 로그 포맷을 설정합니다.
 
-    upstream channels-backend {
+    upstream backend {
         server django:8000;
+        server 43.202.43.182:8000;
+    }
+
+    upstream front {
+        server frontend:3000;
+        server 43.202.43.182:3000;
     }
 
     server {
@@ -66,7 +72,7 @@ http {
 
         # Frontend 설정
         location / {
-            proxy_pass http://frontend:3000;
+            proxy_pass http://front; # upstream 블록에서 설정한 이름을 사용합니다.
             # 아래 proxy_set_header 지시문들은 프록시된 요청의 헤더를 설정합니다.
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -76,7 +82,7 @@ http {
 
         # Django 설정 (API페이지)
         location ~ ^/api/ {
-            proxy_pass http://django:8000; # 여기서 'django'는 Django 서비스의 호스트 이름이나 IP 주소입니다.
+            proxy_pass http://backend; # upstream 블록에서 설정한 이름을 사용합니다.
             # 아래 proxy_set_header 지시문들은 프록시된 요청의 헤더를 설정합니다.
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
