--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -62,6 +62,16 @@ jobs:
           echo "AWS_S3_REGION_NAME=\"${{ secrets.AWS_S3_REGION_NAME }}\"" >> .env
           echo "AWS_REDIS_HOST=\"${{ secrets.AWS_REDIS_HOST }}\"" >> .env
 
+      - name: Copy env file to EC2-lb1
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.EC2_HOST1 }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_KEY }}
+          port: ${{ secrets.EC2_PORT }}
+          source: ".env"
+          target: "compose"
+
       - name: Copy env file to EC2
         uses: appleboy/scp-action@master
         with:
@@ -82,6 +92,16 @@ jobs:
 #          source: "grafana.ini"
 #          target: "compose/grafana"
 
+      - name: Copy docker-compose.prod.yml to EC2-lb1
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.EC2_HOST1 }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_KEY }}
+          port: ${{ secrets.EC2_PORT }}
+          source: "docker-compose.lb.yml"
+          target: "compose"
+
       - name: Copy docker-compose.prod.yml to EC2
         uses: appleboy/scp-action@master
         with:
@@ -91,6 +111,19 @@ jobs:
           port: ${{ secrets.EC2_PORT }}
           source: "docker-compose.prod.yml"
           target: "compose"
+
+      - name: Deploy to EC2-lb1 Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST1 }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_KEY }}
+          port: ${{ secrets.EC2_PORT }}
+          script: |
+            cd compose
+            docker-compose -f docker-compose.lb.yml down
+            docker-compose -f docker-compose.lb.yml pull
+            docker-compose -f docker-compose.lb.yml up -d
 
       - name: Deploy to EC2 Server
         uses: appleboy/ssh-action@master
