--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -92,7 +92,7 @@ jobs:
 #          source: "grafana.ini"
 #          target: "compose/grafana"
 
-      - name: Copy docker-compose.prod.yml to EC2-lb1
+      - name: Copy docker-compose.lb.yml to EC2-lb1
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.EC2_HOST1 }}
