feat : 서버 추가 로드밸런싱 테스트

--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -23,13 +23,15 @@ http {
     '"$http_user_agent" "$http_x_forwarded_for"'; # 로그 포맷을 설정합니다.
 
     upstream backend {
-        server django:8000;
         server 3.38.107.253:8000;
+        server 3.38.178.89:8000;
+        server django:8000 weight=2;
     }
 
     upstream front {
-        server frontend:3000;
         server 3.38.107.253:3000;
+        server 3.38.178.89:3000;
+        server frontend:3000 weight=2;
     }
 
     server {
