--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -73,6 +73,16 @@ jobs:
           source: ".env"
           target: "compose"
 
+      - name: Copy env file to EC2-lb2
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.EC2_HOST2 }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_KEY }}
+          port: ${{ secrets.EC2_PORT }}
+          source: ".env"
+          target: "compose"
+
       - name: Copy env file to EC2
         uses: appleboy/scp-action@master
         with:
@@ -103,6 +113,16 @@ jobs:
           source: "docker-compose.lb.yml"
           target: "compose"
 
+      - name: Copy docker-compose.lb.yml to EC2-lb2
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.EC2_HOST2 }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_KEY }}
+          port: ${{ secrets.EC2_PORT }}
+          source: "docker-compose.lb.yml"
+          target: "compose"
+
       - name: Copy docker-compose.prod.yml to EC2
         uses: appleboy/scp-action@master
         with:
@@ -117,6 +137,19 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST1 }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_KEY }}
+          port: ${{ secrets.EC2_PORT }}
+          script: |
+            cd compose
+            docker-compose -f docker-compose.lb.yml down
+            docker-compose -f docker-compose.lb.yml pull
+            docker-compose -f docker-compose.lb.yml up -d
+
+      - name: Deploy to EC2-lb2 Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST2 }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_KEY }}
           port: ${{ secrets.EC2_PORT }}
