--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "eslint-config-prettier": "^8.8.0",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
