fix : CD prune 조건 추가

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -175,7 +175,7 @@ jobs:
           script: |
             cd compose
             docker-compose -f docker-compose.lb.yml down
-            docker system prune --all --volumes
+            docker system prune --all --volumes --force
             docker-compose -f docker-compose.lb.yml up -d
 
       - name: Down EC2-lb2 Server && Up EC2-lb1 Server
@@ -200,7 +200,7 @@ jobs:
           script: |
             cd compose
             docker-compose -f docker-compose.lb.yml down
-            docker system prune --all --volumes
+            docker system prune --all --volumes --force
             docker-compose -f docker-compose.lb.yml up -d
 
       - name: Up EC2-lb2 Server && Down >> Deploy >> UP to EC2 Server
@@ -216,7 +216,7 @@ jobs:
             docker exec -i nginx nginx -s reload
             cd ..
             docker-compose -f docker-compose.main.yml down
-            docker system prune --all --volumes
+            docker system prune --all --volumes --force
             docker-compose -f docker-compose.main.yml up -d
             cd nginx
             mv -f nginx.0.conf nginx.conf
