--- a/docker-compose.main.yml
+++ b/docker-compose.main.yml
@@ -63,6 +63,8 @@ services:
     image: maaayreel/relaysketch-frontend:latest
     depends_on:
       - django
+    environment:
+      VITE_APP_KAKAO_API_KEY: ${VITE_APP_KAKAO_API_KEY}
 
   certbot:
     container_name: certbot
